# nova

./: .gitattributes  .gitignore  .gitmodules  BPMaterial_8h_source.html  CMakeLists.txt  ContributionFunc_8h_source.html  Doxyfile  MainScene_8h_source.html  MatrixStack_8h_source.html  README.md  annotated.html  build.sh  classBPMaterial-members.html  classBaseFunc.html  classCamera.html  classFrameScene-members.html  classMainScene-members.html  classMatrixStack-members.html  classMesh-members.html  classMorletFunc.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  oldCMakeLists.txt  run.bat  run.ps1  structWindowContext.html  utils_8h_source.html
.github/workflows/: doxygen.yml
docs/: BPMaterial_8h_source.html  Camera_8h_source.html  ContributionFunc_8h_source.html  EventData_8h_source.html  FrameScene_8h_source.html  GLSL_8h_source.html  MainScene_8h_source.html  MatrixStack_8h_source.html  Mesh_8h_source.html  Program_8h_source.html  annotated.html  classBPMaterial.html  classBaseFunc-members.html  classBaseFunc.html  classBaseViewportFBO-members.html  classBaseViewportFBO.html  classCamera-members.html  classCamera.html  classEventData-members.html  classEventData.html  classFrameScene.html  classFrameViewportFBO-members.html  classFrameViewportFBO.html  classMainScene.html  classMatrixStack.html  classMesh.html  classMorletFunc-members.html  classMorletFunc.html  classProgram-members.html  classProgram.html  classes.html  functions.html  functions_func.html  hierarchy.html  include_8h_source.html  index.html  structWindowContext-members.html  structWindowContext.html  utils_8h_source.html
docs/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_c.js  classes_0.js  classes_2.js  classes_6.js  functions_0.js  functions_3.js  functions_5.js  functions_6.js
include/: .gitmodules  BPMaterial.h  Camera.h  ContributionFunc.h  EventData.h  FrameScene.h  FreeCam.h  GLSL.h  MainScene.h  MatrixStack.h  Mesh.h  Program.h  include.h  utils.h
resources/: basic.fsh  basic.vsh  basic_fsh.glsl  basic_vsh.glsl  phong.fsh  phong.vsh  phong_inst.fsh  phong_inst.vsh
search/: all_4.js  all_7.js  all_8.js  classes_0.js  functions_1.js  functions_6.js  searchdata.js
src/: Camera.cpp  EventData.cpp  FreeCam.cpp  GLSL.cpp  MainScene.cpp  MatrixStack.cpp  Mesh.cpp  Program.cpp  main.cpp  utils.cpp
